chore: update envs

--- a/api/.env.example
+++ b/api/.env.example
@@ -5,3 +5,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://root:development@localhost:5432/student_class?schema=public"
+PORT=3333
