build: update deps

--- a/api/package.json
+++ b/api/package.json
@@ -12,13 +12,14 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "node dist/main NODE_ENV=production",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "test:int": "jest --config ./jest-int.json"
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
@@ -27,7 +28,9 @@
     "@prisma/client": "^4.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "dotenv": "^16.0.1",
     "nestjs-pino": "^3.1.1",
+    "pg": "^8.7.3",
     "pino-http": "^8.2.0",
     "pino-http-print": "^3.1.0",
     "reflect-metadata": "^0.1.13",
